Fix embed spacing

--- a/src/postcss/frontend/wp-block/embed.css
+++ b/src/postcss/frontend/wp-block/embed.css
@@ -11,6 +11,8 @@
 .wp-block-embed.wp-has-aspect-ratio {
 	& iframe {
 		@mixin abs-full;
+
+		margin: 0;
 	}
 
 	&.wp-embed-aspect-4-3 {
